--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ authors:
   monica:
     name: Monica
     display_name: Monica
-    avatar: 'assets/images/sal.png'
+    avatar: 'assets/images/logo.png'
     email: avagyanmonika3@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
     linkedin: https://www.linkedin.com/in/monica-avagyan/
