--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "IT Blog"
 email: avagyanmonika3@gmail.com
 timezone: UTC +4
-baseurl: "/monica-blog.github.io"
+baseurl: "/ITblog.github.io"
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
